# cookiescutter_demo

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
cookiescutter_demo/: __init__.py  data-acces.py  dataset.py
cookiescutter_demo/modeling/: train.py
docs/: mkdocs.yml
docs/docs/: index.md
src/: features.py  plots.py
src/modeling/: predict.py
