[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cookiescutter_demo"
version = "0.0.1"
description = "demo project for cookiescutter"
authors = [
  { name = "kiran anchule" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["cookiescutter_demo"]
include = ["pyproject.toml", "cookiescutter_demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cookiescutter_demo"]
force-sort-within-sections = true

